--- a/galleria.html
+++ b/galleria.html
@@ -18,7 +18,7 @@
     <h1 style="margin-bottom: 0px;">Kuvagalleria</h1>
   </header>
 
-<p><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
+<p style="text-indent: -14px;"><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
 <p><a href="#Seka">Hyppää tästä suoraan sekalaisiin!</a></p>
 
 <h2>Villasukat</h2>
