style sheettiin toistuva tyylitys

--- a/galleria.html
+++ b/galleria.html
@@ -10,12 +10,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
-  
  </head> 
 <body> 
   <header>
     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-    <h1 style="margin-bottom: 0px;">Kuvagalleria</h1>
+    <h1>Kuvagalleria</h1>
   </header>
 
 <p style="text-indent: -14px;"><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
