--- a/historia.html
+++ b/historia.html
@@ -11,7 +11,7 @@
 
 <header>
     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-    <h1 style="margin-bottom: 0px;">Kuinka kaikki alkoi?</h1>
+    <h1>Kuinka kaikki alkoi?</h1>
 </header>
 
 <p style="margin-top: 0px;"><em>”Nyt neulot patalapun”, ”Nyt neulot kaulahuivin” ja ”Nyt neulot neulegraffitin”.</em> Vihasin neulomista ala- sekä yläasteella eikä ihmekään. 
