--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="muuta kivaa.html">Muuta</a>
   </nav>
 
- <h1 style="margin-bottom: 0px;">Tervetuloa!</h1> 
+ <h1>Tervetuloa!</h1> 
  <p>Tule nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos olet täällä vasten tahtoasi. <em>Sori siitä...</em></p> 
 
  <p>Nyt kun olet tänne eksynyt syystä tai toisesta, niin katso ihmeessä ympärillesi. Tämän sivuston sydän on ehdottomasti 
