--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -14,20 +14,20 @@
 <body> 
 <header>
     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-    <h1 style="margin-bottom: 0px;">Muuta kivaa</h1>
+    <h1>Muuta kivaa</h1>
 </header>
  
 <h2 style="margin-top: 0px; margin-bottom: 0px;">Suosikki lankakauppani:</h2>
 
 <div class="rivi">
   <div class="sarake">
-    <h3>Menita</h3>
+    <h3 style="margin-top: 0px;">Menita</h3>
       <p>Menita on sympaattinen pikku lankakauppa, josta olen ensimmäiset lankakeräni aikoinani ostanut. 
       Tykkäsin erityisesti Helsingin Punavuoressa sijaitsevasta liikkeestä ja siellä usein kävinkin. 
       Valitettavasti se on nykyisin suljettu. 
       Menitalla on hyvä valikoima edullisia lankoja tiukalle budjetille. 
       Löytyy toki myös parempiakin lankojakin jonkun verran.</p>
-      <a id="maanvaiva" href="https://www.menita.fi" target="_blank" rel="noopener noreferrer">Menitan verkkokauppa</a>
+      <a href="https://www.menita.fi" target="_blank" rel="noopener noreferrer">Menitan verkkokauppa</a>
       <h4>Espoon putiikki</h4>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127125.41415416835!2d24.381242286718745!3d60.1420825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468df4b55982a44d%3A0xde7a4cd1e0a461be!2sMenita%20Espoo!5e0!3m2!1sfi!2sfi!4v1696450990610!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
@@ -41,7 +41,7 @@
   </div>
   <div class="sarake">
     <br>
-    <h3>Snurre</h3>
+    <h3 style="margin-top: 0px;">Snurre</h3>
       <p>Snurre on lankakauppojen karkkikauppa, oikea silmän ilo. 
       Valikoima on laadukas ja erikoinen, täältä ei löydä Novitan perus lankoja ollenkaan. 
       Tänne ei saa astua nälkäisenä, sillä se tulee pirun kalliiksi.</p>
