--- a/ohjeet.html
+++ b/ohjeet.html
@@ -10,7 +10,7 @@
 <body>
 <header>
      <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
-     <h1 style="margin-bottom: 0px;">Ohjeet</h1>
+     <h1>Ohjeet</h1>
 </header>
     
   <h2 style="margin-top: 0px;">&lt;!DOCTYPE socks&gt;</h2>
