--- a/ohjeet.html
+++ b/ohjeet.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Meerin Villasukat - Ohjeet</title> 
     <meta name="keywords" content="meerin villasukat, villasukat"> 
+    <style>
+      p {margin-top: 0px;}
+    </style>
  </head>
 <body>
 <header>
@@ -29,8 +32,8 @@
        <th>1</th>
      </tr>
      <tr>
-       <th>7 veljestä lankaa taustavärillä</th>
-       <th>x grammaa</th>
+       <th>7 veljestä lankaa päävärillä</th>
+       <th>110 grammaa</th>
      </tr>
      <tr>
        <th>7 veljestä lankaa tehostevärillä</th>
@@ -40,52 +43,86 @@
        <th>Hyvää teetä</th>
        <th>4 kuppia</th>
      </tr>
-    </table>
+    </table> <br>
 
-    <p>Tästä ohjeesta tulee koon 37 tai 38 sukat käsialastasi riippuen.
+    <p>Tästä ohjeesta tulee noin. koon 38 sukat, käsialastasi riippuen.
        Voit halutessasi myös käyttää jotakin muuta lankaa, joka on 100g/200m 
        juoksuista, sillä se on saman paksuista kuin ohjeen suosittelema lanka. 
+       Tämä ohje on ihan vaan perus sukka kirjoneuleosiolla. Jos sukkien 
+       neulominen tulee luonnostaan, et tarvitse muuta kuin ruutukaavion.
     </p>
 
-    <p> <strong>Resori:</strong> <br>
-        Aloita luomalla 48s. Jaa silmukat pienemmille 3,5mm puikoille 
+    <h4>Resori:</h4>
+    <p> Aloita luomalla 48 s. Jaa silmukat pienemmille 3,5 mm puikoille 
         niin, että jokaisella puikolla on 12s. Neulo 2x2 resoria, eli 
         2 silmukkaa oikein ja sitten kaksi silmukkaa nurin ja niin edelleen. 
         Kun resoria on 12 kerrosta tai 3,5cm se on valmis. 
     </p>
 
-    <p> <strong>Varsi:</strong> <br>
-        Vaihda käyttöön isommat 4mm puikot ja neulo kaksi kerrosta kaikki silmukat oikein.
-        Aloita sitten neulomaan kaavion mukaan. Huomaa, että kaaviota luetaan 
+    <h4>Varsi:</h4>
+    <p> Vaihda käyttöön isommat 4mm puikot ja neulo kaksi kerrosta kaikki silmukat oikein.
+        Aloita sitten neulomaan ruutukaavion mukaan. Huomaa, että kaaviota luetaan 
         alhaalta ylös sekä oikealta vasemmalle. Neulo vaaleat ruudut 
-        taustavärillä ja mustat ruudut tehostelangalla. Muista lankadominanssi. 
+        päävärillä ja mustat ruudut tehostelangalla. Muista lankadominanssi. 
         Tehosteväri tulee ottaa ”takaa”, että se tulee parhaiten neuloksessa 
         esille. Kiinnitä myös pitkät langanjuoksut, ettei neulokseen jää ikäviä 
         lankasilmukoita. Nyt kannattaa käyttää kerroslaskuria tai peittää tehdyt 
         rivit, että pysyy parhaiten mukana. Kun olet neulonut ruutupiirroksen loppuun, 
-        leikkaa tehostelanka. Tästä eteenpäin käytetään ainoastaan taustaväriä. Neulo vielä 
+        leikkaa tehostelanka. Tästä eteenpäin käytetään ainoastaan pääväriä. Neulo vielä 
         kaksi riviä pelkällä taustavärillä ja aloita kantapää.
     </p>
 
-    <p> <strong>Kantalappu:</strong> <br> 
-        Nyt tehdään tavallinen vahvistettu kantapää. Neulo viimeiselle puikolle ensimmäisen 
-        puikon silmukat (yht. 24s). Nurjalla puolella nosta ensimmäinen silmukka neulomatta 
+    <h4>Kantapää:</h4>
+    <p> Nyt tehdään tavallinen vahvistettu kantapää. Neulo viimeiselle puikolle ensimmäisen 
+        puikon silmukat (yht. 24s). Nurjalla puolella nosta ensimmäinen silmukka nurin neulomatta 
         ja neulo loput silmukat nurin. Oikealla puolella nosta joka toinen silmukka neulomatta 
         ja neulo joka toinen normaalisti. Neulo näin 25 kerrosta, viimeisenä nurja kerros.
     </p>
 
-    <p> <strong>Kantalapun kavennukset:</strong> <br> 
-        Jatka vahvennettua neulosta kuten aikaisemmin. Jaa nyt silmukat kolmelle puikolle. 
+    <h4>Kantalapun kavennukset:</h4>
+    <p> Jatka vahvennettua neulosta kuten aikaisemmin. Jaa nyt silmukat kolmelle puikolle. 
         Neulo ensimmäiselle puikolle 8 silmukkaa ja seuraavalle puikolle 7. Viimeiselle puikolle 
         jää yhdeksän silmukkaa. Neulo vielä viimeiseltä puikolta yksi silmukka ja nosta edellinen 
         neulomatta nostettu silmukka sen yli, eli tee ylivetokavennus.<br><br>
         Käännä työ ympäri ja neulo nurjalta puolelta. Nosta yksi neulomatta ja neulo normaalisti 
         nurjaa keskimmäisen puikon silmukoita, kunnes pääset puikon viimeiseen silmukkaan. Siirrä 
         viereiseltä puikolta keskipuikolle silmukka ja neulo nämä kaksi silmukkaa nurin yhteen.<br><br> 
-        Käännä taas työ ja neulo oikealta puolelta. Toista kahta vaihetta, kunnes kaikki ensimmäisen 
-        ja kolmannen puikon silmukat on kavennettu pois. 
+        Käännä taas työ ja neulo oikealta puolelta. Toista näitä kahta vaihetta, kunnes kaikki ensimmäisen 
+        ja kolmannen puikon silmukat on kavennettu pois ja jäljellä on ainoastaan 7 silmukkaa. 
     </p>
 
+    <h4>Kantalapun reunasilmukoiden noukkiminen:</h4> 
+    <p> Nappaa kantalapun reunalta 13 s sekä yksi kantalapun ja seuraavan puikon välistä, välttääksesi siihen 
+        herkästi syntyvää reikää. Neulo normaalisti 2 ja 3 puikon silmukat ja nouki taas 1 silmukka kolmannen 
+        puikon ja kantalapun välistä ja 13 silmukkaa kantalapun reunasta. Kavenna kantapohjasta yksi silmukka ja 
+        jaa ne tasaisesti ensimmäiselle ja viimeiselle puikolle, kummallekin puikolle 3 silmukkaa. Neulo yksi kerros 
+        kaikki silmukat oikein.
+    </p>
+
+    <h4>Kiilakavennukset:</h4>
+    <p> Aloitetaan kavennukset. Neulo ensimmäisen puikon kolmanneksi ja toiseksi viimeisin silmukka yhteen ja sitten 
+        vielä viimeinen silmukka oikein. Kavennetaan taas neljännen puikon alussa. Neulo yksi silmukka oikein, sitten tee 
+        ssk-kavennus, eli nosta neulomatta kaksi silmukkaa kuin neuloisit ne ja sitten vasta neulot ne yhteen takaa. Toista 
+        kavennuksia joka toinen kerros, kunnes puikoilla on taas 12 s.
+    </p>  
+
+    <h4>Jalkaterä:</h4>
+    <p> Neulo sileää neuletta, kunnes pohja on noin 19 cm pitkä tai kunnes pikkuvarvas melkein peittyy.
+    </p>  
+
+    <h4>Sädekavennukset: </h4>
+    <p> Silmukoita kavennetaan puikon keskellä ja lopussa, jokaisella puikolla. <br>
+        1.	Neulotaan neljä silmukkaa, neulotaan kaksi silmukkaa yhteen ja tätä jatketaan koko kierros.
+        Neulo kolme välikerrosta. <br>
+        2.	Neulotaan kolme silmukkaa, neulotaan kaksi silmukkaa yhteen.
+        Neulo kolme välikerrosta. <br>
+        3.	Neulotaan kaksi silmukkaa, neulotaan kaksi silmukkaa yhteen.
+        Neulo kaksi välikerrosta. <br>
+        4.	Neulo yksi silmukka, neulotaan kaksi silmukkaa yhteen.
+        Neulo yksi välikerros. <br>
+        5.	Neulo kaksi silmukkaa yhteen. Katkaise lanka ja vedä se jäljelle jääneiden 8 silmukan läpi ja kiristä. <br>
+        Päättele langat ja kastele ja blokkaa sukat, että ne pääsevät täyteen potentiaaliinsa.
+    </p>  
 
     <a href=index.html>
         <button class="button-52" role="link">Takaisin etusivulle</button></a>
