--- a/ohjeet.html
+++ b/ohjeet.html
@@ -124,8 +124,10 @@
         Päättele langat ja kastele ja blokkaa sukat, että ne pääsevät täyteen potentiaaliinsa.
     </p>  
 
+    <img src="Gallerialoppu/Ruutu.JPG" alt="ruutupiirros" width="90%">
+
     <a href=index.html>
-        <button class="button-52" role="link">Takaisin etusivulle</button></a>
+        <button class="button-52" role="link" style="margin-top: 10px;">Takaisin etusivulle</button></a>
 
 </body>
 </html>
