eka siirretty galleriasta historiaan

--- a/historia.html
+++ b/historia.html
@@ -35,11 +35,9 @@
     ja käsittää mitä piti tehdä, kuin kirjoitettuja ohjeita, ainakin siinä vaiheessa, kun termit eivät olleet tuttuja. Jos joku kohta 
     oli epäselvä katsoin ne hidastettuna ja toistin perässä. Sain ensimmäiset villasukkani neulottua ja totesin, että villasukathan on 
     aika kivoja. Ne jaksaa oikeasti tehdä loppuun saakka toisin kuin joitakin villapaitoja, joita on vääntänyt jo toista ellei 
-    kolmattakin kuukautta. 
-<br>
-    *Tähän kuva niistä ekoista villasukista
-    </p>
-
+    kolmattakin kuukautta. </p>
+    <img src="Gallerialoppu/Eka.JPG" alt="Ensimmäiset sukat" width="90%">
+    
 <p>Sitten aloin suoltamaan villasukkia niin maan perkuleesti, että jokaisella ystävälläni on varmaan jo kolme paria sukkia ja itselläni 
     on varmaan joku parisenkymmentä. Olen villasukat jalassa käytännössä aina kunhan hellerajat ei pauku. Usein myös otan villasukat 
     mukaan laukussa, jos menen kylään ja sukat eivät mahdu kenkiin. Mummini tykkäsi ihastella villasukkiani ja ihmetellä kanssani, miten 
