Vaahtokarkki pois, myöhemmin historiaan

--- a/historia.html
+++ b/historia.html
@@ -20,10 +20,7 @@
 
 <p>Mummini oli kova tekemään käsitöitä ja häneltä sai perinteisesti jouluisin villasukkia. Mummini sai minut innostumaan neulomisesta. 
     Hän neuloi jotakin missä oli palmikkoa. Se oli minun silmääni jännän näköistä ja pyysin häntä opettamaan palmikon neulomisen minulle. 
-    Opin palmikon neulomisen nopeasti ja se innosti minua neulomaan lisää.
-<br>
-    *tähän kuva siitä palmikko harjoituksesta vai onko se purettu?
-    </p>
+    Opin palmikon neulomisen nopeasti ja se innosti minua neulomaan lisää.</p>
 
 <p>Löysin käsityölehdistä mielenkiintoisen näköisiä villapaitojen ohjeita ja ryhdyin hommiin. Paitsi, että en ryhtynytkään koska ne 
     kirjoitetut ohjeet olivat minun silmääni, kuin jotakin hepreaa. Mikä hemmetin ssk ja neulomatta nostaminen? Ai oho hups tätä 
