logolinkin fiksaus, yms muuta pientä

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
  <p>Tule nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos olet täällä vasten tahtoasi. <em>Sori siitä...</em></p> 
 
  <p>Nyt kun olet tänne eksynyt syystä tai toisesta, niin katso ihmeessä ympärillesi. Tämän sivuston sydän on ehdottomasti 
-    kuvagalleria. Sieltä pääset katselemaan mun tekemiä töitä. Ohje sivulta pääset itsekin neulomaan. Historiasta voit 
-    lueskella mun lärpätyksiä. Ei oo liian pitkä teksti. Tai ehkä vähän, muttei ihan kauheesti liian pitkä. Muuta sivustolta 
-    pääset tsekkaamaan jotain mun suosikki liikkeitä ja nettisivuja. </p>
+    kuvagalleria. Sieltä pääset katselemaan mun tekemiä töitä. "Ohje" sivulta pääset itsekin neulomaan tai ainakin vähintään 
+    katsomaan mun ohjetta. Historiasta voit lueskella mun lärpätyksiä. Ei oo liian pitkä teksti. Tai ehkä vähän, muttei ihan 
+    kauheesti liian pitkä. "Muuta" sivulta pääset tsekkaamaan jotain mun suosikki liikkeitä ja nettisivuja. </p>
 
 </body> 
 </html>
