--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -13,7 +13,7 @@
  </head> 
 <body> 
 <header>
-    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></a></img>
     <h1>Muuta kivaa</h1>
 </header>
  
@@ -48,6 +48,13 @@
       <a href="https://www.snurre.fi" target="_blank" rel="noopener noreferrer">Snurren verkkokauppa</a>
       <h4>Snurren putiikki</h4>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.7492157108616!2d24.93429937703659!3d60.168330443582605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bb54bf5005d%3A0xbc7539dc5549f0e7!2sLankakauppa%20Snurre!5e0!3m2!1sfi!2sfi!4v1696450927205!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
+
+    <h3>Neulova Ninja</h3>  
+      <p>Neulova Ninja on Suomalainen pienyritys, joka toimii nykyään ainoastaan verkossa. Neulovalla Ninjalla on 
+      omat NinYarn-langat, jotka hän värjää itse käsin. NinYarn-langat ovat ällistyttävän räikeän värisiä, eikä niitä 
+      tietääkseni saa ostettua mistään muualta, kuin itse Neulovalta Ninjalta. Värjäysprosesseistaan hän usein 
+      päivittelee someihinsa.</p> 
+      <a href="https://neulova.ninja" target="_blank" rel="noopener noreferrer">Neulovan Ninjan verkkokauppa</a>
     </div>
 </div>
 
