--- a/ohjeet.html
+++ b/ohjeet.html
@@ -12,7 +12,7 @@
  </head>
 <body>
 <header>
-     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></a></img>
      <h1>Ohjeet</h1>
 </header>
     
