--- a/galleria.html
+++ b/galleria.html
@@ -13,11 +13,11 @@
  </head> 
 <body> 
   <header>
-    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></a></img>
     <h1>Kuvagalleria</h1>
   </header>
 
-<p style="text-indent: -14px;"><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
+<p><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
 <p><a href="#Seka">Hyppää tästä suoraan sekalaisiin!</a></p>
 
 <h2>Villasukat</h2>
