--- a/historia.html
+++ b/historia.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></a></img>
     <h1>Kuinka kaikki alkoi?</h1>
 </header>
 
@@ -33,18 +33,24 @@
     oli epäselvä katsoin ne hidastettuna ja toistin perässä. Sain ensimmäiset villasukkani neulottua ja totesin, että villasukathan on 
     aika kivoja. Ne jaksaa oikeasti tehdä loppuun saakka toisin kuin joitakin villapaitoja, joita on vääntänyt jo toista ellei 
     kolmattakin kuukautta. </p>
+    <figure>
     <img src="Gallerialoppu/Eka.JPG" alt="Ensimmäiset sukat" width="90%">
-    
+    <figcaption style="font-family: Garamond; color: #EA7F1B;">Ensimmäiset villasukkani kaikessa (hieman paikatussa) komeudessaan!</figcaption>
+    </figure>
+
 <p>Sitten aloin suoltamaan villasukkia niin maan perkuleesti, että jokaisella ystävälläni on varmaan jo kolme paria sukkia ja itselläni 
     on varmaan joku parisenkymmentä. Olen villasukat jalassa käytännössä aina kunhan hellerajat ei pauku. Usein myös otan villasukat 
     mukaan laukussa, jos menen kylään ja sukat eivät mahdu kenkiin. Mummini tykkäsi ihastella villasukkiani ja ihmetellä kanssani, miten 
-    ne olin tehnyt. Erityisesti hän tykkäsi minun vaaleanpunaisista palmikkovillasukistani ja kehui niitä vuolaasti.<br> *kuva pinkistä sukista </p>    
+    ne olin tehnyt. Erityisesti hän tykkäsi minun vaaleanpunaisista palmikkovillasukistani ja kehui niitä vuolaasti.<br> 
+    *kuva pinkistä sukista </p>    
 
 <p>Kun mummini menehtyi neuloin hänelle taivasmatkasukat. En ole uskonnollinen, mutta koin taivasmatkasukat kauniina ajatuksena, 
     erityisesti meidän neulomistaustamme ajatellen. Päätin neuloa hänelle nuo samaiset palmikkovillasukat mistä hän oli kovasti tykännyt, 
-    mutta asianmukaisesti valkoisella langalla. <br>
-    *Kuva pirkon keskeneräisistä sukista
-</p>
+    mutta asianmukaisesti valkoisella langalla. </p>
+    <figure>
+    <img src="Gallerialoppu/Kesken.JPG" alt="Keskeneräiset sukat" width="90%"> <br> <br>
+    <figcaption>Mummini kesken jääneet sukat</figcaption>
+    </figure>
 
 <a href=index.html>
     <button class="button-52" role="link">Takaisin etusivulle</button></a>
