--- a/ohjeet.html
+++ b/ohjeet.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meerin Villasukat - Ohjeet</title> 
-    <meta name="keywords" content="meerin villasukat, villasukat"> 
+    <meta name="keywords" content="meerin villasukat, villasukat, DOCTYPE socks, doctype socks-ohje"> 
     <style>
       p {margin-top: 0px;}
     </style>
@@ -124,7 +124,7 @@
         Päättele langat ja kastele ja blokkaa sukat, että ne pääsevät täyteen potentiaaliinsa.
     </p>  
 
-    <img src="Gallerialoppu/Ruutu.JPG" alt="ruutupiirros" width="90%">
+    <img src="Gallerialoppu/Ruutu.JPG" alt="ruutupiirros" width="95%">
 
     <a href=index.html>
         <button class="button-52" role="link" style="margin-top: 10px;">Takaisin etusivulle</button></a>
