--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="keywords" content="meerin villasukat, villasukat"> 
   <style>
     a:link {color: #ede7d9;
-    font-family: 'Courier New', Courier, monospace;}
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2vw;}
     a:link {font-size: 17px;}
     a:hover {color: #93032e;}
     a:visited {color: #ede7d9;}
@@ -17,7 +18,7 @@
 
 <body> 
   <nav class ="navigation">  
-    <img src="Gallerialoppu/IsoLogo.png" alt="Paska logo" width="25%"> 
+    <img src="Gallerialoppu/IsoLogo.png" alt="Paska logo" width="20%"> 
    
     <a href="galleria.html">Kuvagalleria</a>
     <a href="historia.html">Historia</a>
