--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 
  <h1>Tervetuloa!</h1> 
  <p>Tule nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos olet täällä vasten tahtoasi. <em>Sori siitä...</em></p> 
+ 
+ <div class="eturivi">
+  <div class="etusarake">
+    <img src="Gallerialoppu/IMG_8596.jpeg" alt="Hohottaja" style="width:100%">
+  </div>
+  <div class="etusarake">
+    <img src="Gallerialoppu/IMG_8613.JPG" alt="Lankakerät" style="width:100%">
+  </div>
+  <div class="etusarake">
+    <img src="Gallerialoppu/IMG_8594.jpeg" alt="Hohottaja" style="width:100%">
+  </div>
+</div>
 
  <p>Nyt kun olet tänne eksynyt syystä tai toisesta, niin katso ihmeessä ympärillesi. Tämän sivuston sydän on ehdottomasti 
     kuvagalleria. Sieltä pääset katselemaan mun tekemiä töitä. "Ohje" sivulta pääset itsekin neulomaan tai ainakin vähintään 
