Viime hetken fiksailuja

--- a/historia.html
+++ b/historia.html
@@ -35,21 +35,23 @@
     kolmattakin kuukautta. </p>
     <figure>
     <img src="Gallerialoppu/Eka.JPG" alt="Ensimmäiset sukat" width="90%">
-    <figcaption style="font-family: Garamond; color: #EA7F1B;">Ensimmäiset villasukkani kaikessa (hieman paikatussa) komeudessaan!</figcaption>
+    <figcaption style="font-family: Garamond, Arial; color: #EA7F1B;">Ensimmäiset villasukkani kaikessa (hieman paikatussa) komeudessaan!</figcaption>
     </figure>
 
 <p>Sitten aloin suoltamaan villasukkia niin maan perkuleesti, että jokaisella ystävälläni on varmaan jo kolme paria sukkia ja itselläni 
     on varmaan joku parisenkymmentä. Olen villasukat jalassa käytännössä aina kunhan hellerajat ei pauku. Usein myös otan villasukat 
     mukaan laukussa, jos menen kylään ja sukat eivät mahdu kenkiin. Mummini tykkäsi ihastella villasukkiani ja ihmetellä kanssani, miten 
-    ne olin tehnyt. Erityisesti hän tykkäsi minun vaaleanpunaisista palmikkovillasukistani ja kehui niitä vuolaasti.<br> 
-    *kuva pinkistä sukista </p>    
+    ne olin tehnyt. Erityisesti hän tykkäsi minun vaaleanpunaisista palmikkovillasukistani ja kehui niitä vuolaasti.</p>  
+    <figure>
+      <img src="Gallerialoppu/IMG_8629.jpeg" alt="Palmikkosukat" width="90%">  
+    </figure>  
 
-<p>Kun mummini menehtyi neuloin hänelle taivasmatkasukat. En ole uskonnollinen, mutta koin taivasmatkasukat kauniina ajatuksena, 
+<p>Kun mummini menehtyi neuloin hänelle taivasmatkasukat. En ole uskonnollinen, mutta koin taivasmatkasukat kivana ajatuksena, 
     erityisesti meidän neulomistaustamme ajatellen. Päätin neuloa hänelle nuo samaiset palmikkovillasukat mistä hän oli kovasti tykännyt, 
     mutta asianmukaisesti valkoisella langalla. </p>
     <figure>
-    <img src="Gallerialoppu/Kesken.JPG" alt="Keskeneräiset sukat" width="90%"> <br> <br>
-    <figcaption>Mummini kesken jääneet sukat</figcaption>
+    <img src="Gallerialoppu/Kesken.JPG" alt="Keskeneräiset sukat" width="90%">
+    <figcaption style="font-family: Garamond, Arial; color: #EA7F1B;"> Mummini kesken jääneet sukat</figcaption>
     </figure>
 
 <a href=index.html>
