--- a/galleria.html
+++ b/galleria.html
@@ -33,7 +33,7 @@
     <img src="Gallerialoppu/Raita.JPG" alt="eripari samapari sukat" width="90%">
     <p>Näihin ei ole ohjetta, freestyletin nämä ja en kirjoittanut ylös mitään. 
       On kuitenkin helpot sukat tehdä itse perässä. 
-      Tekee päävärillä resorin ja kantapään ja sukan varressa ja jalassa vuorottelee värejä aina kahden silmukan jaksoissa.</p>
+      Tekee päävärillä resorin ja kantapään ja sukan varressa ja jalkaterässä vuorottelee värejä aina kahden silmukan jaksoissa.</p>
 
   <h3>Kaiku-sukat</h3>   
     <img src="Gallerialoppu/Kaiku.JPG" alt="Kaikusukat" width="90%">
