--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -54,7 +54,8 @@
       omat NinYarn-langat, jotka hän värjää itse käsin. NinYarn-langat ovat ällistyttävän räikeän värisiä, eikä niitä 
       tietääkseni saa ostettua mistään muualta, kuin itse Neulovalta Ninjalta. Värjäysprosesseistaan hän usein 
       päivittelee someihinsa.</p> 
-      <a href="https://neulova.ninja" target="_blank" rel="noopener noreferrer">Neulovan Ninjan verkkokauppa</a>
+      <a href="https://neulova.ninja" target="_blank" rel="noopener noreferrer">Neulovan Ninjan verkkokauppa</a> <br><br>
+      <img src="Gallerialoppu/IMG_8597.jpeg" alt="Lankakeriä" width="70%">
     </div>
 </div>
 
