--- a/ohjeet.html
+++ b/ohjeet.html
@@ -18,6 +18,8 @@
     
   <h2 style="margin-top: 0px;">&lt;!DOCTYPE socks&gt;</h2>
 
+  <img src="Gallerialoppu/IMG_8641.jpeg" alt="Doctype socks" width="80%">
+
     <table>
      <tr>
        <th>Tarvike</th>
@@ -45,65 +47,52 @@
      </tr>
     </table> <br>
 
-    <p>Tästä ohjeesta tulee noin. koon 38 sukat, käsialastasi riippuen.
-       Voit halutessasi myös käyttää jotakin muuta lankaa, joka on 100g/200m 
-       juoksuista, sillä se on saman paksuista kuin ohjeen suosittelema lanka. 
-       Tämä ohje on ihan vaan perus sukka kirjoneuleosiolla. Jos sukkien 
-       neulominen tulee luonnostaan, et tarvitse muuta kuin ruutukaavion.
+    <p>Tästä ohjeesta tulee noin. koon 38 sukat, käsialastasi riippuen. Voit halutessasi myös käyttää jotakin muuta lankaa, joka on 100g/200m 
+       juoksuista, sillä se on saman paksuista kuin ohjeen suosittelema lanka. Tämä ohje on ihan vaan perus sukka kirjoneuleosiolla. Jos sukkien 
+       neulominen tulee luonnostaan, et tarvitse muuta kuin ruutukaavion. Tulee ohjettakin paremmat sukat, jos itse säädät ruutukaavion sopimaan 
+       ohuemmalle langalle.
     </p>
 
     <h4>Resori:</h4>
-    <p> Aloita luomalla 48 s. Jaa silmukat pienemmille 3,5 mm puikoille 
-        niin, että jokaisella puikolla on 12s. Neulo 2x2 resoria, eli 
-        2 silmukkaa oikein ja sitten kaksi silmukkaa nurin ja niin edelleen. 
-        Kun resoria on 12 kerrosta tai 3,5cm se on valmis. 
+    <p> Aloita luomalla 48 s. Jaa silmukat pienemmille 3,5 mm puikoille niin, että jokaisella puikolla on 12s. Neulo 2x2 resoria, eli 
+        2 silmukkaa oikein ja sitten kaksi silmukkaa nurin ja niin edelleen. Kun resoria on 12 kerrosta tai 3,5cm se on valmis. 
     </p>
 
     <h4>Varsi:</h4>
-    <p> Vaihda käyttöön isommat 4mm puikot ja neulo kaksi kerrosta kaikki silmukat oikein.
-        Aloita sitten neulomaan ruutukaavion mukaan. Huomaa, että kaaviota luetaan 
-        alhaalta ylös sekä oikealta vasemmalle. Neulo vaaleat ruudut 
-        päävärillä ja mustat ruudut tehostelangalla. Muista lankadominanssi. 
-        Tehosteväri tulee ottaa ”takaa”, että se tulee parhaiten neuloksessa 
-        esille. Kiinnitä myös pitkät langanjuoksut, ettei neulokseen jää ikäviä 
-        lankasilmukoita. Nyt kannattaa käyttää kerroslaskuria tai peittää tehdyt 
-        rivit, että pysyy parhaiten mukana. Kun olet neulonut ruutupiirroksen loppuun, 
-        leikkaa tehostelanka. Tästä eteenpäin käytetään ainoastaan pääväriä. Neulo vielä 
-        kaksi riviä pelkällä taustavärillä ja aloita kantapää.
+    <p> Vaihda käyttöön isommat 4mm puikot ja neulo kaksi kerrosta kaikki silmukat oikein. Aloita sitten neulomaan ruutukaavion mukaan. Huomaa, 
+        että kaaviota luetaan alhaalta ylös sekä oikealta vasemmalle. Neulo vaaleat ruudut päävärillä ja mustat ruudut tehostelangalla. Muista 
+        lankadominanssi. Tehosteväri tulee ottaa ”takaa”, että se tulee parhaiten neuloksessa esille. Kiinnitä myös pitkät langanjuoksut, ettei 
+        neulokseen jää ikäviä lankasilmukoita. Nyt kannattaa käyttää kerroslaskuria tai peittää tehdyt rivit, että pysyy parhaiten mukana. Kun 
+        olet neulonut ruutupiirroksen loppuun, leikkaa tehostelanka. Tästä eteenpäin käytetään ainoastaan pääväriä. Neulo vielä kaksi riviä 
+        pelkällä taustavärillä ja aloita kantapää.
     </p>
 
     <h4>Kantapää:</h4>
-    <p> Nyt tehdään tavallinen vahvistettu kantapää. Neulo viimeiselle puikolle ensimmäisen 
-        puikon silmukat (yht. 24s). Nurjalla puolella nosta ensimmäinen silmukka nurin neulomatta 
-        ja neulo loput silmukat nurin. Oikealla puolella nosta joka toinen silmukka neulomatta 
-        ja neulo joka toinen normaalisti. Neulo näin 25 kerrosta, viimeisenä nurja kerros.
+    <p> Nyt tehdään tavallinen vahvistettu kantapää. Neulo viimeiselle puikolle ensimmäisen puikon silmukat (yht. 24s). Nurjalla puolella nosta 
+        ensimmäinen silmukka nurin neulomatta ja neulo loput silmukat nurin. Oikealla puolella nosta joka toinen silmukka neulomatta ja neulo 
+        joka toinen normaalisti. Neulo näin 25 kerrosta, viimeisenä nurja kerros.
     </p>
 
     <h4>Kantalapun kavennukset:</h4>
-    <p> Jatka vahvennettua neulosta kuten aikaisemmin. Jaa nyt silmukat kolmelle puikolle. 
-        Neulo ensimmäiselle puikolle 8 silmukkaa ja seuraavalle puikolle 7. Viimeiselle puikolle 
-        jää yhdeksän silmukkaa. Neulo vielä viimeiseltä puikolta yksi silmukka ja nosta edellinen 
-        neulomatta nostettu silmukka sen yli, eli tee ylivetokavennus.<br><br>
-        Käännä työ ympäri ja neulo nurjalta puolelta. Nosta yksi neulomatta ja neulo normaalisti 
-        nurjaa keskimmäisen puikon silmukoita, kunnes pääset puikon viimeiseen silmukkaan. Siirrä 
-        viereiseltä puikolta keskipuikolle silmukka ja neulo nämä kaksi silmukkaa nurin yhteen.<br><br> 
-        Käännä taas työ ja neulo oikealta puolelta. Toista näitä kahta vaihetta, kunnes kaikki ensimmäisen 
-        ja kolmannen puikon silmukat on kavennettu pois ja jäljellä on ainoastaan 7 silmukkaa. 
+    <p> Jatka vahvennettua neulosta kuten aikaisemmin. Jaa nyt silmukat kolmelle puikolle. Neulo ensimmäiselle puikolle 8 silmukkaa ja seuraavalle 
+        puikolle 7. Viimeiselle puikolle jää yhdeksän silmukkaa. Neulo vielä viimeiseltä puikolta yksi silmukka ja nosta edellinen neulomatta nostettu 
+        silmukka sen yli, eli tee ylivetokavennus.<br><br>
+        Käännä työ ympäri ja neulo nurjalta puolelta. Nosta yksi neulomatta ja neulo normaalisti nurjaa keskimmäisen puikon silmukoita, kunnes pääset 
+        puikon viimeiseen silmukkaan. Siirrä viereiseltä puikolta keskipuikolle silmukka ja neulo nämä kaksi silmukkaa nurin yhteen.<br><br> 
+        Käännä taas työ ja neulo oikealta puolelta. Toista näitä kahta vaihetta, kunnes kaikki ensimmäisen ja kolmannen puikon silmukat on kavennettu 
+        pois ja jäljellä on ainoastaan 7 silmukkaa. 
     </p>
 
     <h4>Kantalapun reunasilmukoiden noukkiminen:</h4> 
-    <p> Nappaa kantalapun reunalta 13 s sekä yksi kantalapun ja seuraavan puikon välistä, välttääksesi siihen 
-        herkästi syntyvää reikää. Neulo normaalisti 2 ja 3 puikon silmukat ja nouki taas 1 silmukka kolmannen 
-        puikon ja kantalapun välistä ja 13 silmukkaa kantalapun reunasta. Kavenna kantapohjasta yksi silmukka ja 
-        jaa ne tasaisesti ensimmäiselle ja viimeiselle puikolle, kummallekin puikolle 3 silmukkaa. Neulo yksi kerros 
-        kaikki silmukat oikein.
+    <p> Nappaa kantalapun reunalta 13 s sekä yksi kantalapun ja seuraavan puikon välistä, välttääksesi siihen herkästi syntyvää reikää. Neulo normaalisti 
+        2 ja 3 puikon silmukat ja nouki taas 1 silmukka kolmannen puikon ja kantalapun välistä ja 13 silmukkaa kantalapun reunasta. Kavenna kantapohjasta 
+        yksi silmukka ja jaa ne tasaisesti ensimmäiselle ja viimeiselle puikolle, kummallekin puikolle 3 silmukkaa. Neulo yksi kerros kaikki silmukat oikein.
     </p>
 
     <h4>Kiilakavennukset:</h4>
-    <p> Aloitetaan kavennukset. Neulo ensimmäisen puikon kolmanneksi ja toiseksi viimeisin silmukka yhteen ja sitten 
-        vielä viimeinen silmukka oikein. Kavennetaan taas neljännen puikon alussa. Neulo yksi silmukka oikein, sitten tee 
-        ssk-kavennus, eli nosta neulomatta kaksi silmukkaa kuin neuloisit ne ja sitten vasta neulot ne yhteen takaa. Toista 
-        kavennuksia joka toinen kerros, kunnes puikoilla on taas 12 s.
+    <p> Aloitetaan kavennukset. Neulo ensimmäisen puikon kolmanneksi ja toiseksi viimeisin silmukka yhteen ja sitten vielä viimeinen silmukka oikein. 
+        Kavennetaan taas neljännen puikon alussa. Neulo yksi silmukka oikein, sitten tee ssk-kavennus, eli nosta neulomatta kaksi silmukkaa kuin 
+        neuloisit ne ja sitten vasta neulot ne yhteen takaa. Toista kavennuksia joka toinen kerros, kunnes puikoilla on taas 12 s.
     </p>  
 
     <h4>Jalkaterä:</h4>
