--- a/ohjeet.html
+++ b/ohjeet.html
@@ -18,7 +18,7 @@
     
   <h2 style="margin-top: 0px;">&lt;!DOCTYPE socks&gt;</h2>
 
-  <img src="Gallerialoppu/IMG_8641.jpeg" alt="Doctype socks" width="80%">
+  <img src="Gallerialoppu/IMG_8641.jpeg" alt="Doctype socks" width="60%"> <br> <br>
 
     <table>
      <tr>
