--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     a:link {color: #ede7d9;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 3vw;}
+    font-size: 17px;}
     a:hover {color: #93032e;}
     a:visited {color: #ede7d9;}
   </style>
